--- a/index.html
+++ b/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>RECAP</title>
-      
-    </head>
-    <body>
 
-    </body>
+<head>
+    <title>RECAP</title>
+    <link href="./styles.css" rel="stylesheet" type="text/css">
+    </link>
+</head>
+
+<body>
+    <div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    </div>
+</body>
+
 </html>
