added menu on index.html

--- a/index.html
+++ b/index.html
@@ -9,14 +9,18 @@
 
 <body>
     <div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
-        <div></div>
+        <nav>
+            <a href="./index.html" target='self' >HOME</a>
+            <a href=# target='self' >METHOD</a>
+        </nav>
     </div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+        <div></div>
+    
 </body>
 
 </html>
