--- a/method.html
+++ b/method.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>RECAP</title>
-    <link href="./method.css" rel="stylesheet" type="text/css">
+    <link href='./method.css' rel='stylesheet' type='text/css'>
     </link>
 </head>
 <body>
